# ccode_viewer

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml
.github/workflows/: package-exe.yml  package-tauri-macos.yml  package-tauri-windows.yml  package-tauri.yml
e2e/: mermaid.spec.js  sessions-live-refresh.spec.js  today-force-delete.spec.js  urlHash.spec.js  viewer.spec.js
scripts/: browser.js  ensure-dev-install.mjs  package-exe.mjs  prepare-tauri.mjs  release.mjs  run-e2e-dev.mjs
server/: README.md  fileWatcher.js  fsHelpers.js  launcher.js  listWatcher.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  vitest.config.mjs
server/__tests__/: agentHomeDiscovery.test.js  copilotWorkspaceDiscovery.test.js  fileWatcher.test.js  fsHelpers.test.js  launcher.test.js  listWatcher.test.js  liveTurnModel.test.js  messageContent.test.js  multiHomeDiscovery.test.js  pathResolver.test.js  projects.test.js  resolveProjectPath.test.js  sample.classification.test.js  server.eventsList.test.js  server.test.js
server/discovery/: agentHomeDiscovery.js  codexHead.js  copilotWorkspaceDiscovery.js
shared/: liveTurnModel.js  messageContent.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/static/: index.html
viewer/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
(+38 files in other folders)
