[package]
name = "rewind"
version = "0.9.0"
description = "Cross-platform desktop host for the Rewind session viewer"
authors = ["shukebeta"]
license = "MIT"
repository = "https://github.com/shukebeta/ccode_viewer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rewind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2"
